// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionIcon renders a coloured Deposit transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Deposit"
    class="governance"
    src="/img/icons/activity/Deposit.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Received transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Received"
    class="banking"
    src="/img/icons/activity/Received.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Restaked transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Restaked"
    class="staking"
    src="/img/icons/activity/Restaked.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Sent transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Sent"
    class="banking"
    src="/img/icons/activity/Sent.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Staked transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Staked"
    class="staking"
    src="/img/icons/activity/Staked.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Submitted transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Submitted"
    class="governance"
    src="/img/icons/activity/Submitted.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Update withdraw address transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Update withdraw address"
    class="distribution"
    src="/img/icons/activity/Withdrawal.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Voted transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Voted"
    class="governance"
    src="/img/icons/activity/Voted.svg"
  />
</div>
`;

exports[`TransactionIcon renders a coloured Withdrawal transaction icon 1`] = `
<div
  class="tx__icon"
>
  <img
    alt="Withdrawal"
    class="distribution"
    src="/img/icons/activity/Withdrawal.svg"
  />
</div>
`;
